--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,11 +4,11 @@
     "python.analysis.diagnosticSeverityOverrides": {
         "reportMissingImports": "none"
     },
-    "python.analysis.extraPaths": [
-        "${workspaceFolder}/src"
-    ],
     "python.analysis.languageServerMode": "default",
     "python.envFile": "${workspaceFolder}/.env",
     "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
-    "editor.formatOnSave": true,
+    "[python]": {
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "charliermarsh.ruff"
+    }
 }
