--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "dj-rest-auth>=7.0.1",
     "django>=5.2",
     "djangorestframework>=3.16.0",
-    "djangorestframework-simplejwt>=5.5.0",
-    "djoser>=2.3.1",
     "drf-spectacular>=0.28.0",
     "python-dotenv>=1.1.0",
 ]
